@@ -23,7 +23,7 @@ from sc8pr import Image, Canvas, BOTH
 from sc8pr.geom import shiftAlongNormal, angleDifference, DEG
 from sc8pr.shape import Polygon, Line, Circle
 from sc8pr.util import rangef
-from sc8pr.robot import Robot as _Robot # .gui
+from sc8pr.robot.gui import Robot as _Robot
 from sc8pr.sprite import physics, Sprite
 from sc8pr.plot import PSketch, PCanvas
 
